cargo-aprz-lib/src/commands/snapshots/cargo_aprz_lib__commands__validate__tests__invalid_toml_syntax.snap
---
source: cargo-aprz-lib/src/commands/validate.rs
expression: snapshot_content
---
TOML parse error at line 3, column 15
  |
3 | [[deny_if_any]
  |               ^
unclosed array table, expected `]`
